Updated the website to add Education and interests. Can be viewed.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <!-- Logo -->
                         <div class="logo">
                             <a class="logo-wrap" href="#body">
-                                <img class="logo-img" src="img/logo.png" alt="Asentus Logo">
+                                <img class="logo-img" src="img/970x647/UMBC.jpg" alt="UMBC Logo">
                             </a>
                         </div>
                         <!-- End Logo -->
@@ -68,7 +68,7 @@
                             <ul class="nav navbar-nav navbar-nav-right">
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#body">Home</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#about">About</a></li>
-                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#experience">Experience</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#experience">Education</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#work">Work</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#contact">Contact</a></li>
                             </ul>
@@ -87,10 +87,10 @@
                 <div class="row">
                     <div class="col-sm-6 sm-margin-b-60">
                         <div class="margin-b-30">
-                            <h1 class="promo-block-title">Under <br/> Construction</h1>
-                            <h1 class="promo-block-title">Visit <br/> Soon</h1>
+                            <h1 class="promo-block-title">Shantanu <br/> Hirlekar</h1>
+                            <p class="promo-block-text">Graduate Teaching Assistant at the University of Maryland, Baltimore County</p>
                             <p class="promo-block-text">Enterprise Analyst (Part Time) at Mccormick &amp; Company</p>
-                            <p class="promo-block-text">Computer Science Graduate Student at the Univerity of Maryland Baltimore County</p>
+                            <p class="promo-block-text">Computer Science Graduate Student at the Univerity of Maryland, Baltimore County</p>
                         </div>
                         <ul class="list-inline">
                             <li><a href="https://www.linkedin.com/in/hshantanu/" target="_blank" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
@@ -124,32 +124,44 @@
                                 <div class="margin-b-30">
                                     <h2>About Me</h2>
                                     <p>I am a Computer Science gradutate student at the University of Maryland, Baltimore County.
-                                    Also, I am working part time with McCormick &amp; Company in their IT department. My work is focused in the area of Data Engineering, Data Science, and Machine Learning.</p>
+                                    Also, I am working part time with McCormick &amp; Company with their Data Science and Analytics team. My work is focused in the area of Data Engineering, Data Science, and Machine Learning.</p>
                                     <p>I enjoy working in the areas of Cybersecurity and Machine Learning.</p>
                                     <p>In my free time I like to play the guitar, swim, and watch movies. </p>
                                 </div>
-                                <a href="https://drive.google.com/file/d/0B8aLWzCIyvi3TXVSMEZ6LXBwYWs/view?usp=sharing" class="btn-theme btn-theme-md btn-default-bg text-uppercase">Resume</a>
+                                <a href="https://drive.google.com/file/d/0B8aLWzCIyvi3TXVSMEZ6LXBwYWs/view?usp=sharing" target="_blank" class="btn-theme btn-theme-md btn-default-bg text-uppercase">Resume</a>
                             </div>
                         </div>
 
-                        <h2>My Skills</h2>
+                        <h2>What I do:</h2>
                         <!-- Progress Box -->
                         <div class="progress-box">
-                            <h5>Adobe Illustrator <span class="color-heading pull-right">87%</span></h5>
+                            <h5>Software Development<span class="color-heading pull-right">95%</span></h5>
                             <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="87"></div>
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="95"></div>
                             </div>
                         </div>
                         <div class="progress-box">
-                            <h5>Adobe Photoshop <span class="color-heading pull-right">96%</span></h5>
+                            <h5>Computer Security / Malware Analysis<span class="color-heading pull-right">85%</span></h5>
                             <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="96"></div>
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="85"></div>
                             </div>
                         </div>
                         <div class="progress-box">
-                            <h5>Graphic Design <span class="color-heading pull-right">77%</span></h5>
+                            <h5>Data Engineering<span class="color-heading pull-right">80%</span></h5>
                             <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="77"></div>
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="80"></div>
+                            </div>
+                        </div>
+                        <div class="progress-box">
+                            <h5>Machine Learning<span class="color-heading pull-right">70%</span></h5>
+                            <div class="progress">
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="70"></div>
+                            </div>
+                        </div>                        
+                        <div class="progress-box">
+                            <h5>Databases<span class="color-heading pull-right">65%</span></h5>
+                            <div class="progress">
+                                <div class="progress-bar bg-color-base" role="progressbar" data-width="65"></div>
                             </div>
                         </div>
                         <!-- End Progress Box -->
@@ -217,8 +229,56 @@
         </div>
         <!-- End Work -->
 
-        <!-- Experience -->
+         <!-- Projects -->
         <div id="experience">
+            <div class="bg-color-sky-light" data-auto-height="true">
+                <div class="container content-lg">
+                    <h2>Projects</h2>
+                    <div class="row row-space-2 margin-b-4">
+                        <div class="col-md-3 col-sm-6 md-margin-b-4">
+                            <div class="service bg-color-base wow zoomIn" data-height="height" data-wow-duration=".3" data-wow-delay=".1s">
+                                <div class="service-element">
+                                    <i class="service-icon color-white icon-graduation"></i>
+                                </div>
+                                <div class="service-info">
+                                    <h3 class="color-white">University of Maryland Baltimore County, Baltimore MD, USA</h3>
+                                    <p class="color-white margin-b-5">MS in Computer Science. (AUG 2016 - MAY 2018)</p>
+                                </div>
+                                <a href="http://umbc.edu/" target="_blank" class="content-wrapper-link"></a>    
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 md-margin-b-4">
+                            <div class="service" data-height="height">
+                                <div class="service-element">
+                                    <i class="service-icon icon-graduation"></i>
+                                </div>
+                                <div class="service-info">
+                                    <h3>University of Pune, Pune MH, India</h3>
+                                    <p class="margin-b-5">M.Sc. in Computer Science. (JUN 2013- JUN 2015)</p>
+                                </div>
+                                <a href="http://www.unipune.ac.in/" target="_blank" class="content-wrapper-link"></a>  
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 md-margin-b-4">
+                            <div class="service" data-height="height">
+                                <div class="service-element">
+                                    <i class="service-icon icon-graduation"></i>
+                                </div>
+                                <div class="service-info">
+                                    <h3>University of Pune, Pune MH, India</h3>
+                                    <p class="margin-b-5">B.Sc. in Computer Science. (JUN 2010 - APR 2013)</p>
+                                </div>
+                                <a href="http://www.unipune.ac.in/" target="_blank" class="content-wrapper-link"></a>  
+                            </div>
+                        </div>
+                    <!--// end row -->
+                </div>
+            </div>
+        </div>
+        <!-- End Experience -->
+
+        <!-- Education -->
+        <div id="education">
             <div class="bg-color-sky-light" data-auto-height="true">
                 <div class="container content-lg">
                     <h2>My Education</h2>
@@ -263,33 +323,33 @@
                 </div>
             </div>
         </div>
-        <!-- End Experience -->
+        <!-- End Education -->
 
         <!-- Clients -->
+
         <div class="bg-color-sky-light">
             <div class="content-lg container">
                 <!-- Swiper Clients -->
+                <h2>My Technical Profiles: </h2>
                 <div class="swiper-slider swiper-clients">
                     <!-- Swiper Wrapper -->
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <img class="swiper-clients-img" src="img/clients/01.png" alt="Clients Logo">
+                            <a href= "https://www.hackerrank.com/hshantanu" target="_blank">
+                            <img class="swiper-clients-img" src="img/clients/ha3.png" alt="Hackerank Profile"></a>
                         </div>
                         <div class="swiper-slide">
-                            <img class="swiper-clients-img" src="img/clients/02.png" alt="Clients Logo">
+                            <a href= "https://stackoverflow.com/users/3259776/hshantanu?tab=profile" target="_blank">
+                            <img class="swiper-clients-img" src="img/clients/so1.png" alt="Stack Overflow Profile"></a>
                         </div>
                         <div class="swiper-slide">
-                            <img class="swiper-clients-img" src="img/clients/03.png" alt="Clients Logo">
+                            <a href= "https://github.com/hshantanu" target="_blank">
+                            <img class="swiper-clients-img" src="img/clients/github-logo.png" alt="GitHub Profile"></a>
                         </div>
-                        <div class="swiper-slide">
-                            <img class="swiper-clients-img" src="img/clients/04.png" alt="Clients Logo">
-                        </div>
-                        <div class="swiper-slide">
-                            <img class="swiper-clients-img" src="img/clients/05.png" alt="Clients Logo">
-                        </div>
-                        <div class="swiper-slide">
-                            <img class="swiper-clients-img" src="img/clients/06.png" alt="Clients Logo">
-                        </div>
+                        <!--div class="swiper-slide">
+                            <a href= "https://leetcode.com/hshantanu/" target="_blank">
+                            <img class="swiper-clients-img" src="img/clients/leetcode.png" alt="LeetCode Profile"></a>
+                        </div-->
                     </div>
                     <!-- End Swiper Wrapper -->
                 </div>
@@ -322,7 +382,7 @@
                     <div class="row">
                         <div class="col-md-3 col-xs-6 md-margin-b-30">
                             <h4>Location</h4>
-                            <a href="https://en.wikipedia.org/wiki/Baltimore">Baltimore, Maryland, USA</a>
+                            <a href="https://en.wikipedia.org/wiki/Baltimore" target="_blank">Baltimore, MD, USA</a>
                         </div>
                         <div class="col-md-3 col-xs-6 md-margin-b-30">
                             <h4>Phone</h4>
@@ -335,7 +395,7 @@
                         </div>
                         <div class="col-md-3 col-xs-6">
                             <h4>Web</h4>
-                            <a href="hshantanu.github.io">hshantanu.github.io</a>
+                            <a href="hshantanu.github.io" target="_blank">hshantanu.github.io</a>
                         </div>
                     </div>
                     <!--// end row -->
@@ -350,10 +410,10 @@
             <div class="content container">
                 <div class="row">
                     <div class="col-xs-6">
-                        <img class="footer-logo" src="img/logo.png" alt="Acecv Logo">
+                        <img class="footer-logo" src="img/970x647/mccormick.png" alt="">
                     </div>
                     <div class="col-xs-6 text-right sm-text-left">
-                        <p class="margin-b-0"><a class="fweight-700" href="http://keenthemes.com/preview/acecv/">Acecv</a> Theme Powered by: <a class="fweight-700" href="http://www.keenthemes.com/">KeenThemes.com</a></p>
+                        <p class="margin-b-0"><a class="fweight-700" href="">Shantanu Hirlekar</a> Computer Science Graduate Student at: <a class="fweight-700" href="">UMBC</a></p>
                     </div>
                 </div>
                 <!--// end row -->
