--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                     <div class="col-sm-6 sm-margin-b-60">
                         <div class="margin-b-30">
                             <h1 class="promo-block-title">Shantanu <br/> Hirlekar</h1>
-                            <p class="promo-block-text">Graduate Teaching Assistant at the University of Maryland, Baltimore County</p>
-                            <p class="promo-block-text">Enterprise Analyst (Part Time) at Mccormick &amp; Company</p>
-                            <p class="promo-block-text">Computer Science Graduate Student at the Univerity of Maryland, Baltimore County</p>
+                            <p class="promo-block-text">Currently working as a Software Engineer Lead at FedEx Dataworks.</p>
+                            <p class="promo-block-text">Holds a masters degree in Computer Science from the University of Maryland, Baltimore County. (2018)</p>
+                            <p class="promo-block-text">Love to hike and explore nearby trails in my spare time.</p>
                         </div>
                         <ul class="list-inline">
                             <li><a href="https://www.linkedin.com/in/hshantanu/" target="_blank" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
@@ -278,7 +278,7 @@
         <!-- End Experience -->
 
         <!-- Education -->
-        <div id="education">
+        < id="education">
             <div class="bg-color-sky-light" data-auto-height="true">
                 <div class="container content-lg">
                     <h2>My Education</h2>
@@ -382,7 +382,7 @@
                     <div class="row">
                         <div class="col-md-3 col-xs-6 md-margin-b-30">
                             <h4>Location</h4>
-                            <a href="https://en.wikipedia.org/wiki/Baltimore" target="_blank">Baltimore, MD, USA</a>
+                            <a href="https://en.wikipedia.org/wiki/Baltimore" target="_blank">Pittsburgh, PA, USA</a>
                         </div>
                         <div class="col-md-3 col-xs-6 md-margin-b-30">
                             <h4>Phone</h4>
@@ -413,7 +413,7 @@
                         <img class="footer-logo" src="img/970x647/mccormick.png" alt="">
                     </div>
                     <div class="col-xs-6 text-right sm-text-left">
-                        <p class="margin-b-0"><a class="fweight-700" href="">Shantanu Hirlekar</a> Computer Science Graduate Student at: <a class="fweight-700" href="">UMBC</a></p>
+                        <p class="margin-b-0"><a class="fweight-700" href="">Shantanu Hirlekar</a> Software Engineer Lead at: <a class="fweight-700" href="">FedEx Dataworks</a></p>
                     </div>
                 </div>
                 <!--// end row -->
@@ -444,7 +444,6 @@
         <script src="js/components/progress-bar.min.js" type="text/javascript"></script>
         <script src="js/components/swiper.min.js" type="text/javascript"></script>
         <script src="js/components/wow.min.js" type="text/javascript"></script>
-
     </body>
     <!-- END BODY -->
 </html>
