--- a/index.html
+++ b/index.html
@@ -445,5 +445,6 @@
         <script src="js/components/swiper.min.js" type="text/javascript"></script>
         <script src="js/components/wow.min.js" type="text/javascript"></script>
     </body>
+    </div>
     <!-- END BODY -->
 </html>
