--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- BEGIN HEAD -->
     <head>
         <meta charset="utf-8"/>
-        <title>Shantanu Hirlekar - CS Grad student at UMBC</title>
+        <title>Shantanu Hirlekar - My Website</title>
         <link rel="icon" href="https://upload.wikimedia.org/wikipedia/en/thumb/c/cc/UMBC_Retrievers_logo.svg/1104px-UMBC_Retrievers_logo.svg.png" type="image/png">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
