--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- BEGIN HEAD -->
     <head>
         <meta charset="utf-8"/>
-        <title>Shantanu Hirlekar - My Website</title>
+        <title>Shantanu Hirlekar</title>
         <link rel="icon" href="https://upload.wikimedia.org/wikipedia/en/thumb/c/cc/UMBC_Retrievers_logo.svg/1104px-UMBC_Retrievers_logo.svg.png" type="image/png">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
@@ -88,8 +88,9 @@
                     <div class="col-sm-6 sm-margin-b-60">
                         <div class="margin-b-30">
                             <h1 class="promo-block-title">Shantanu <br/> Hirlekar</h1>
+                            <p class="promo-block-text">Website is going major updates and is under construction. Reach out: 2hshantanu@gmail.com</p>
                             <p class="promo-block-text">Currently working as a Software Engineer Lead at FedEx Dataworks.</p>
-                            <p class="promo-block-text">Holds a masters degree in Computer Science from the University of Maryland, Baltimore County. (2018)</p>
+                            <p class="promo-block-text">Holds a master's degree in Computer Science from the University of Maryland, Baltimore County. (Class of 2018)</p>
                             <p class="promo-block-text">Love to hike and explore nearby trails in my spare time.</p>
                         </div>
                         <ul class="list-inline">
@@ -101,7 +102,7 @@
                     </div>
                     <div class="col-sm-6">
                         <div class="promo-block-img-wrap">
-                            <img class="promo-block-img img-responsive" src="img/mockup/Shantanu.jpg" align="Avatar">
+                            <img class="promo-block-img img-responsive" src="img/mockup/Shantanu.jpeg" align="Avatar">
                         </div>
                     </div>
                 </div>
@@ -116,17 +117,20 @@
             <div class="container content-lg">
                 <div class="row">
                     <div class="col-sm-5 sm-margin-b-60">
-                        <img class="full-width img-responsive" src="img/500x700/Me.jpg" alt="Image">
+                        <img class="full-width img-responsive" src="img/500x700/SA.jpeg" alt="Image">
                     </div>
                     <div class="col-sm-7">
                         <div class="section-seperator margin-b-50">
                             <div class="margin-b-50">
                                 <div class="margin-b-30">
                                     <h2>About Me</h2>
-                                    <p>I am a Computer Science gradutate student at the University of Maryland, Baltimore County.
-                                    Also, I am working part time with McCormick &amp; Company with their Data Science and Analytics team. My work is focused in the area of Data Engineering, Data Science, and Machine Learning.</p>
-                                    <p>I enjoy working in the areas of Cybersecurity and Machine Learning.</p>
-                                    <p>In my free time I like to play the guitar, swim, and watch movies. </p>
+                                    <p>I am currently working at FedEx Dataworks as a Software Engineer Lead. Although my current job is remote,
+                                        you can find me working sometimes in the FedEx Ground office in Coraopolis, PA. <p>
+                                        I graduated from the University of Maryland, Baltimore County with a master's degree in Computer Science in 2018. I did my
+                                        thesis in the area of Machine Learning where we were predicting the prices of spices with McCormick & Company.
+                                    <p>When I am not working, you can find me hiking on a trail in the Settlers Cabin Park. Or you may be able to catch me in a local Pittsburgh brewery.</p>
+                                    <p> I can always talk a lot about technology. But I am equally passionate about movies, politics, and travel. </p>
+                                    <p> I am currently based in Pittsburgh, PA with my wife. </p>
                                 </div>
                                 <a href="https://drive.google.com/file/d/0B8aLWzCIyvi3TXVSMEZ6LXBwYWs/view?usp=sharing" target="_blank" class="btn-theme btn-theme-md btn-default-bg text-uppercase">Resume</a>
                             </div>
